--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <form action = "" method="get">
+    <form action = "exer1.php" method="get">
         <label for=""> Digite um valor1</label>
         <input type = "number" name="num1" id="num1">
         <label for=""> Digite um valor2</label>
