--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
 </head>
 <body>
     <form action = "exer1.php" method="get">
-        <label for=""> Digite um valor1</label>
-        <input type = "number" name="num1" id="num1">
-        <label for=""> Digite um valor2</label>
-        <input type = "number" name="num2" id="num2">
+        <label for=""> Digite seu nome:</label>
+        <input type = "text" name="nome" id="nome"> <br>
+        <label for=""> Digite seu email:</label>
+        <input type = "email" name="email" id="email"><br>
+        <label for=""> Digite sua senha:</label>
+        <input type = "password" name="senha" id="senha"><br>
         <button type="reset">Limpar</button>
         <button type="submit">Enviar</button>
         
+
     </form>
 </body>
 </html>
